Fix some spacing on sidebar

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ body {
 #sidebar {
   display: grid;
   grid-template-rows: 1fr 2fr 8fr;
+  grid-template-rows: repeat(auto-fill, minmax(180px, 2fr));
   grid-column: 1 / 2;
   grid-row: 1 / -1;
   height: 100%;
@@ -201,7 +202,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
   gap: 1rem;
-  margin: 1rem 1rem 1rem 1rem;
+  margin: 1rem 1rem 2.5rem 1rem;
   align-content: space-around;
 }
 
